# covalic

./: CMakeLists.txt  Dockerfile  README  README.md
CMake/: Slicer3PluginsMacros.cmake  SuperBuild.cmake
Code/: CMakeLists.txt
Code/Applications/: CMakeLists.txt  validateDice.cxx  validateJaccard.cxx
Code/Applications/Common/: MultipleBinaryImageMetricsCalculator.h  MultipleBinaryImageMetricsCalculator.txx  surfio.cxx  surfio.h
Code/Applications/PerturbImageLabelsAffine/: CMakeLists.txt  PerturbImageLabelsAffine.cxx  PerturbImageLabelsAffine.xml
Code/Applications/PerturbImageLabelsBSpline/: CMakeLists.txt  PerturbImageLabelsBSpline.cxx  PerturbImageLabelsBSpline.xml
Code/Applications/PerturbImageLabelsBSpline2Das3D/: CMakeLists.txt  PerturbImageLabelsBSpline2Das3D.cxx
Code/Applications/PerturbImageLabelsMorphology/: CMakeLists.txt  PerturbImageLabelsMorphology.cxx
Code/Applications/PerturbImageLabelsMorphology2Das3D/: CMakeLists.txt  PerturbImageLabelsMorphology2Das3D.cxx  PerturbImageLabelsMorphology2Das3D.xml
Code/Applications/ValidateAveDist/: CMakeLists.txt  ValidateAveDist.cxx  ValidateAveDist.xml
Code/Applications/ValidateDice/: CMakeLists.txt  ValidateDice.cxx  ValidateDice.xml
Code/Applications/ValidateDice/Midas-Integration/: ValidateDice.bmm  ValidateDice.bms  ValidateDice.xml
Code/Applications/ValidateImageAveDist/: CMakeLists.txt  ValidateImageAveDist.cxx
Code/Applications/ValidateImageDice/: CMakeLists.txt  ValidateImageDice.cxx
Code/Applications/ValidateImageDice/Midas-Integration/: ValidateImageDice.bmm  ValidateImageDice.bms  ValidateImageDice.xml
Code/Applications/ValidateImageHausdorffDist/: CMakeLists.txt  ValidateImageHausdorffDist.cxx  ValidateImageHausdorffDist.xml
Code/Applications/ValidateImageJaccard/: CMakeLists.txt  ValidateImageJaccard.cxx  ValidateImageJaccard.xml
Code/Applications/ValidateImageJaccard/Midas-Integration/: ValidateImageJaccard.bmm  ValidateImageJaccard.bms  ValidateImageJaccard.xml
Code/Applications/ValidateImageKappa/: CMakeLists.txt  ValidateImageKappa.cxx  ValidateImageKappa.xml
Code/Applications/ValidateImagePPV/: CMakeLists.txt  ValidateImagePPV.cxx  ValidateImagePPV.xml
Code/Applications/ValidateImageSensitivity/: CMakeLists.txt  ValidateImageSensitivity.cxx  ValidateImageSensitivity.xml
Code/Applications/ValidateImageSpecificity/: CMakeLists.txt  ValidateImageSpecificity.cxx  ValidateImageSpecificity.xml
Code/Applications/ValidateInputImage/: CMakeLists.txt  ValidateInputImage.cxx  ValidateInputImage.xml
Code/Applications/ValidateJaccard/: CMakeLists.txt  ValidateJaccard.cxx  ValidateJaccard.xml
Code/Applications/ValidateJaccard/Midas-Integration/: ValidateJaccard.bmm  ValidateJaccard.bms  ValidateJaccard.xml
Code/Applications/ValidateKappa/: CMakeLists.txt  ValidateKappa.cxx
Code/Applications/ValidateSurfaceCurrents/: CMakeLists.txt  ValidateSurfaceCurrents.cxx  ValidateSurfaceCurrents.xml
Code/Applications/ValidateSurfaceHausdorff/: CMakeLists.txt  ValidateSurfaceHausdorff.cxx
Code/Applications/ValidateSurfaceHaussdorff/: CMakeLists.txt  ValidateSurfaceHaussdorff.cxx  ValidateSurfaceHaussdorff.xml
Code/Converters/: LabelToBinaryConverter.h
Code/Metrics/: AbstractValidationMetric.h  AverageDistanceImageToImageMetric.h  AverageDistanceImageToImageMetric.txx  BhattacharyyaImageToImageMetric.h  BhattacharyyaImageToImageMetric.txx  ClosestDistanceSurfaceToSurfaceMetric.cxx  ClosestDistanceSurfaceToSurfaceMetric.h  CohenKappaImageToImageMetric.h  CohenKappaImageToImageMetric.txx  CurrentsSurfaceToSurfaceMetric.cxx  CurrentsSurfaceToSurfaceMetric.h  DiceOverlapImageToImageMetric.h  DiceOverlapImageToImageMetric.txx  HausdorffDistanceImageToImageMetric.h  HausdorffDistanceImageToImageMetric.txx  HausdorffDistanceSurfaceToSurfaceMetric.cxx  HausdorffDistanceSurfaceToSurfaceMetric.h  HaussdorffDistanceSurfaceToSurfaceMetric.cxx  HaussdorffDistanceSurfaceToSurfaceMetric.h  ImageMetricAggregator.h  ImageToImageValidator.h  ImageToImageValidator.txx  JaccardOverlapImageToImageMetric.h  JaccardOverlapImageToImageMetric.txx  KappaCalculator.h  KullbackLeiblerImageToImageMetric.h  KullbackLeiblerImageToImageMetric.txx  LinearImageMetricAggregator.h  LinearSurfaceMetricAggregator.h  MaxImageMetricAggregator.h  MaxSurfaceMetricAggregator.h  MinImageMetricAggregator.h  MinSurfaceMetricAggregator.h  PositivePredictiveValueImageToImageMetric.h  PositivePredictiveValueImageToImageMetric.txx  SensitivityImageToImageMetric.h  SensitivityImageToImageMetric.txx  SpecificityImageToImageMetric.h  SpecificityImageToImageMetric.txx  SurfaceMetricAggregator.h  (+4 more)
Code/Testing/: CMakeLists.txt  RandomDilateImageFilter.h  RandomDilateImageFilter.txx  randomizeLabel.cxx  testImageMetrics.cxx  testMetrics.cxx  testSurfMetrics.cxx  validateLabelImages.cxx
Documentation/: CMakeLists.txt  Makefile  classDiagram.dot
Python/: scoreSubmission.py
Python/Perturbations/: dilationPerturb.py  erosionPerturb.py  rigidWithScalePerturb.py
Python/RankAggregation/: README.md  README.txt  UnsupervisedLearningRankAggregator.py  computeRankWeights.py  computeWeights.py
TestData/: fullbox.mha  halfbox.mha  sphere1.vtk  sphere2.vtk
Utilities/: CMakeLists.txt  ImageCompareCommand.cxx  covalicCLIFilterWatcher.h  covalicCLIHelperFunctions.h  covalicCLIProgressReporter.h  covalicCLISharedLibraryWrapper.cxx  covalicMacro.h  covalicMessage.h  covalicStringUtilities.h
Utilities/Testing/: CMakeLists.txt  covalicCLIFilterWatcherTest.cxx  covalicCLIHelperFunctionsTest.cxx  covalicCLIHelperFunctionsTest.xml  covalicCLIProgressReporterTest.cxx  covalicMessageTest.cxx  covalicUtilitiesHeaderTest.cxx  covalicUtilitiesPrintTest.cxx  covalicUtilitiesTests.cxx
metrics/: DiceOverlapCalculator.h  DiceOverlapCalculator.txx  DiceOverlapImageToImageMetric.txx  KappaCalculator.h  KappaCalculator.txx
